// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Response Button Component should render snapshot when selected is false 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root makeStyles-root-21"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiBox-root MuiBox-root-29 makeStyles-key-22"
    >
      A
    </div>
    <div
      class="MuiBox-root MuiBox-root-30 makeStyles-text-24"
    >
      inner text
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;

exports[`Response Button Component should render snapshot when selected is true 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root makeStyles-root-1 makeStyles-selected-3"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiBox-root MuiBox-root-9 makeStyles-key-2"
    >
      A
    </div>
    <div
      class="MuiBox-root MuiBox-root-10 makeStyles-text-4"
    >
      inner text
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;
